# SDU-2022-CryptoProject

./: .gitignore  .gitmodules  README.md
Merkle_tree/: CMakeLists.txt
Merkle_tree/include/: head.h  merkle_tree.h
Merkle_tree/src/: main.cpp  merkle_tree.cpp
PoC_of_zkp/: Cargo.toml  README.md
PoC_of_zkp/src/: main.rs
PoC_of_zkp/src/comparison/: mod.rs
Poc_Google_password_checkup/: CMakeLists.txt
Poc_Google_password_checkup/cmake/: FindAVX.cmake
Poc_Google_password_checkup/include/: Client.h  Server.h
Poc_Google_password_checkup/src/: Client.cpp  Server.cpp
TEMPLATE/: CMakeLists.txt  README.md
TEMPLATE/src/: main.cpp
birthday_attack_SM3/cpp/: CMakeLists.txt  sm3_attack.cpp  source.cpp
cryptanalysis/: README.md  go.mod  go.sum  invertibility.go  invertibility_test.go  meow.go
ecmh/: CMakeLists.txt  README.md
ecmh/include/: ecmh.hpp  hash.hpp  std.inc
ecmh/src/: ecmh.cpp  main.cpp
faketoshi/: README.md  faketoshi.go  faketoshi_test.go  go.mod  go.sum
hash-wires/: CMakeLists.txt  README.md
hash-wires/include/: tests.hpp  utils.h
hash-wires/src/: main.cpp
md-length-extension-attack/: LEA.h  LEAtest.cpp  SM3LEA.cpp  basic.h  makefile  util.h
md-length-extension-attack/include/: sm3.h
md-length-extension-attack/src/: SM3LEA.cpp
merkle-impl/merkle-tree-impl-cpp/include/: head.h
merkle-impl/merkle-tree-impl-go/: README.md  go.mod  merkle_test.go  merkle_verify.go
merkle-impl/merkle-tree-impl-go/hasher/: hasher.go
merkle-impl/merkle-tree-impl-rust/src/: lib.rs
merkle-tree/: MPT report.md
merkle-tree-impl-cpp/: README.md
merkle-tree-impl-cpp/include/: merkle_tree.h
merkle-tree-impl-cpp/src/: main.cpp  merkle_tree.cpp
merkle-tree-impl-rust/: Cargo.toml
merkle-tree-impl-rust/src/: element.rs  hash_utils.rs  lib.rs  tree.rs
merkle-tree/merkle-impl/merkle-tree-impl-go/: merkle.go  merkle_proof.go
merkle-tree/merkle-impl/merkle-tree-impl-go/hasher/: hasher_test.go
merkle-tree/merkle-impl/merkle-tree-impl-rust/: README.md
merkle-tree/merkle-impl/merkle-tree-impl-rust/src/: element.rs  tree.rs
poc/: CMakeLists.txt  README.md
poc-google-password-checkup/: README.md
poc-google-password-checkup/include/: Client.h  Server.h  head.h
poc-google-password-checkup/src/: Client.cpp  Server.cpp  main.cpp
poc-of-zkp/: README.md
poc-of-zkp/libsnark-version/src/: CMakeLists.txt  cet6.cpp
poc-of-zkp/src/comparison/: comparison.rs  mod.rs
poc/include/: Client.h  Server.h  head.h  stream_channel.h
poc/src/: Client.cpp  Server.cpp  main.cpp  stream_channel.cpp
sig-pitfall/: README.md  go.mod
sig-pitfall/ecdsa-pitfall/: ecdsapitfall.go  ecdsapitfall_test.go
sig-pitfall/sm2-pitfall/: sm2pitfall.go  sm2pitfall_test.go
sm2/: ecdsa-pk-recovery.md
sm2/sm2-applied/: 404.html  Cargo.toml  README.md  resp.html  store.json
sm2/sm2-applied/src/: lib.rs  main.rs
sm2/sm2-go/: README.md  conversion_test.go
sm2/sm2-impl/: cipher_error.h  create_key.c  create_key.h  main.cpp  sm2_sign.c  sm2_sign.h  sm3_with_preprocess.c  sm3_with_preprocess.h
sm2/sm2-impl-go/: conversion.go  go.mod  sm2.go  sm2_test.go
sm2/sm2-impl-rust/: Cargo.toml  README.md
sm2/sm2-impl-rust/src/: consts.rs  error.rs  field.rs  lib.rs  signature.rs  utils.rs
sm2/sm2-impl-rust/src/test_vectors/: group.rs  mod.rs
sm2/sm2-pgp-cpp/: CMakeLists.txt  README.md
sm2/sm2-pgp-cpp/src/: main.cpp
sm2/sm2-pgp-go/openpgp/: go.mod  keys_test.go  read_test.go  write.go  write_test.go
sm2/sm2-pgp-go/openpgp/packet/: encrypted_key.go  encrypted_key_test.go  private_key.go  private_key_test.go  public_key_test.go  signature.go  signature_test.go
sm2/sm2-pgp-go/sm2-pgp/: go.mod
sm2/sm2-pgp-go/sm2-pgp/user/: user.go  user_test.go
sm2/sm2-pgp/openpgp/: README.MD  go.sum  keys.go  read.go
sm2/sm2-pgp/openpgp/packet/: one_pass_signature.go  packet.go  public_key.go
sm2/sm2-pgp/openpgp/s2k/: s2k.go
sm2/sm2-pgp/sm2-pgp/: README.md  sm2-pgp.go
sm3-collision/: README.md
sm3-collision/cpp-naive-rho/: CMakeLists.txt
sm3-collision/cpp-naive-rho/lib/linux/: libgmssl.so.3.0
sm3-collision/cpp-naive-rho/lib/win/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
sm3-collision/cpp-naive-rho/src/: sm3_attack.cpp  sm3_attack_hash_table.cpp
sm3-collision/naive/: CMakeLists.txt
sm3-collision/naive/lib/win/: libcrypto.lib
sm3-collision/naive/src/: sm3_attack.cpp  sm3_attack_win.cpp
sm3-collision/rho/: main.cpp
sm3-collision/rust-naive-rho/: Cargo.toml  README.md
sm3-collision/rust-naive-rho/src/: brute_force.rs  main.rs  utils.rs
sm3-impl/SM3-openssl-syle/: SM3.cpp  SM3test.cpp
sm3-impl/rust-naive-optimised/: Cargo.toml  README.md
sm3-impl/rust-naive-optimised/src/: lib.rs  sm3_base.rs  sm3_opt.rs
sm3-impl/sm3-cpp/: CMakeLists.txt  README.md
sm3-impl/sm3-openssl-style/: makefile  md32_common.h
sm3/md-length-extension-attack/: CMakeLists.txt  README.md
sm3/md-length-extension-attack/src/: SHA256LEA.cpp
sm3/sm3-collision/: README.md
sm3/sm3-collision/cpp-naive-rho/: README.md
sm3/sm3-collision/cpp-naive-rho/src/: rho.cpp  sm3_attack_hash_table.cpp
sm3/sm3-collision/rust-naive-rho/: README.md
sm3/sm3-collision/rust-naive-rho/src/: find_2ndimage.rs  main.rs
sm3/sm3-impl/rust-naive-optimised/: README.md
sm3/sm3-impl/rust-naive-optimised/benches/: my_benchmark.rs
sm3/sm3-impl/rust-naive-optimised/src/: sm3_opt.rs
sm3/sm3-impl/sm3-cpp/src/: sm3.cpp  sm3test.cpp
sm4/: CMakeLists.txt  Makefile  README.md  sm4.h  sm4_T.cpp  sm4_aesni.c  sm4_avx2.c  sm4_avx2_ni.c  sm4_basic.cpp  sm4_local.h  sm4_setkey.c  sm4_test_correctness.cpp  sm4_test_speed.cpp
sm4/include/: sm4.h  sm4_constant.h
sm4/src/: sm4_T.cpp  sm4_aesni.cpp  sm4_avx2.cpp  sm4_avx2_ni.cpp  sm4_basic.cpp  sm4_setkey.cpp  sm4_test_speed.cpp
tx-parser/: README.md  common.py  script-parser.py  tx-parser.py
