[package]
name = "PoC_of_zkp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miden = "0.1.0"
env_logger = { version = "0.9", default-features = false }
hex = { version = "0.4", optional = true }
log = { version = "0.4", default-features = false }
structopt = { version = "0.3", default-features = false }
rand-utils = { package = "winter-rand-utils", version = "0.2", optional = true }