[package]
name = "tcp-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "my_server"
path = "src/lib.rs"

[[bin]]
name = "my_client"
path = "src/main.rs"

[dependencies]
lazy_static="1.4.0"
secp256k1={version="0.20.3", features=["recovery","rand","bitcoin_hashes"]}
p256={version="0.9.0"}
serde={version="1.0.126", features=["derive"]}
serde_json="1.0.64"
libsm="0.5.0"
hex="0.4.3"